# ragcheck

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
backend/: README.md  __init__.py  app.py  database.py
backend/api/: __init__.py  health.py  projects.py
backend/clients/: __init__.py
backend/evaluators/: __init__.py
backend/models/: __init__.py  base.py  project.py
backend/schemas/: __init__.py  project.py
backend/services/: __init__.py  health.py  projects.py
backend/tests/: README.md  test_projects.py
db/: README.md
db/alembic/: README.md
db/alembic/versions/: 20260529_0001_create_projects.py
db/migrations/: 001_initial_schema.sql
docs/: agent-harness.md  repository-structure.md  tech-stack.md
frontend/: README.md  index.html
frontend/src/: app.js  styles.css
scripts/: verify-agent-harness.ps1  verify-backend.ps1  verify-db.ps1  verify-frontend.ps1  verify-repository-structure.ps1  verify-tech-stack.ps1
skills/korean-communication/: SKILL.md
skills/ragcheck-developer/: SKILL.md
skills/ragcheck-evaluator/: SKILL.md
skills/ragcheck-planner/: SKILL.md
