[project]
name = "ragcheck"
version = "0.1.0"
description = "A test harness for evaluating external RAG APIs."
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16,<2",
    "fastapi>=0.115,<1",
    "psycopg[binary]>=3.2,<4",
    "pydantic>=2.10,<3",
    "sqlalchemy>=2.0,<3",
]

[project.optional-dependencies]
dev = [
    "httpx2>=2.0,<3",
    "pytest>=8.0,<9",
    "ruff>=0.11,<1",
]

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]

[tool.ruff]
target-version = "py312"
line-length = 88
